2004-07-27 Sachin Kumar <skumar1@novell.com>

	* worker/bloggers.xml: Added Sureshkumar to Bloggers

2004-07-26 Sachin Kumar <skumar1@novell.com>
	
	* worker/bloggers.xml: Added Umadevi, Sanjay, Ravindra and 
	Jambunathan to bloggers.

2004-07-23 Francisco T. Martinez <paco@mfcon.com>

	* worker/bloggers.xml: Added Paco Martinez to the Bloggers

2004-07-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* worker/Makefile: added 'clean' target.
	* worker/bloggers.xml: removed tipmono. It's been a while since the
	server is not up.
	* worker/monologue-worker.cs: error out on unknown command line
	argument. Handle redirects 'by hand' as auto-handling is disabled
	because otherwise, a "304 Not Modified" is an error.

2004-07-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* worker/monologue-worker.cs: excluded ENTRY_PERSON code as it's not in
	the default.tpl in CVS and make the generated titles for the entries be
	like "Name: Name: Title".

2004-07-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* worker/Makefile: reference ICSharpCode.SharpZipLib.
	* worker/RSS.NET.dll: updated.
	* worker/monologue-worker.cs: don't trust RSS.NET to download the files.
	Added --cachedir option that provides a directory to keep a cache of
	downloaded files. If we have the file, send the If-Modified-Since
	header. Also allow gzipped responses.

2004-03-10  Duncan Mak  <duncan@ximian.com>

	* worker/monologue-worker.cs (RunOnce): Changed the site url from
	"http://monologue.go-mono.com" to the correct
	"http://go-mono.com/monologue".

2003-11-05 Ben Maurer  <bmaurer@users.sourceforge.net>

	* www/mono-powered-big.png: added
	* worker/default.tpl: add mono power icon.

2003-10-21  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* AUTHORS: Added
	* README: Added
	* ChangeLog: Added
	* www/xml.gif: Added
	* worker/xml.gif: Removed